2015-07-09  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-86

	* pyatmlab/config.py:

	- Use extended interpolation

	- Always load configuration

	* pyatmlab/constants.py:

	- Add centi

	* pyatmlab/dataset.py:

	(Dataset.setlocal()):

	- In this method, called from __init__(), go through configuration
	file and set attributes from it.  This will be used for any localised
	settings such as basedir, subdir, etc.

	(Hyperspectral):

	- New mixin class for any hyperspectral instrument, such as IASI.

	* pyatmlab/dataset/tovs.py:

	(IASI):

	- Added class with reader for IASI data

	* pyatmlab/physics.py:

	(wavelength2wavenumber): Added

	(wavenumber2wavelength): Added

	(specrad_wavenumber2frequency): Added

	(specrad_frequency_to_planck_bt): Added

2015-07-07  Gerrit Holl  <g.holl@reading.ac.uk>
	
	* pyatmlab-0-0-85

	* pyatmlab/io.py(read_arts_srf):

	- Added small function to read SRF from ARTS XML format.  Eventually
	this should be superseded by more generic functionality to interact
	with ARTS XML, like was present in PyARTS.

2015-07-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-84

	* doc/source/index.rst:

	- Added missing modules

	* pyatmlab/{collocations,dataset,db,io,physics,tools}.py:

	- Fix docstring syntax errors
	
2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-83

	* pyatmlab/datasets/tovs.py(HIRS):

	- Fix typos

2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-82

	* pyatmlab/datasets/tovs.py(HIRS):

	- Fix typo

2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>:

	* pyatmlab-0-0-81

	* LICENSE: Updated years

	* setup.py: Added new package pyatmlab.datasets

	* pyatmlab/dataset.py: Use logging.error instead of print

	* pyatmlab/io.py:

	- Move collect_values function here

	* pyatmlab/tools.py:

	- Added a safe_eval function, inspired by
	  http://stackoverflow.com/a/9558001/974555
	
	* pyatmlab/datasets.py:

	- Removed this module

	* pyatmlab/datasets/{__init__,groundbased,tanso}.py:
